--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,44 @@
 *{
     margin: 0px;
     padding: 0px;    
-    box-sizing: border-box;
+    box-sizing: border-box; /*Ver qué hacía ésto*/
 }
 
 body{
     font-family: 'Roboto', sans-serif;
     background-color: #ebebeb;
+}
+
+#pie {
+    width: 100%;
+    height: 180px;
+    background-color: #EAC926;
+
+
+}
+
+.tarjetas {
+    width: 25px;
+    height: 16px;
+}
+
+#pie section{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: flex-start;
+}
+
+#pie section article {
+    color: #464242;
+    width: 200px;
+    height: 150px;
+    margin-top:30px;
+}
+
+#pie section article h4{
+    margin-bottom: 10px;
 }
 
 h3{
@@ -64,7 +96,7 @@ header ul li a{
 header .form .input{
     background-color: #FFF;
     border: 1px solid #000;
-    outline: none;
+    outline: none; /*Ver qué es ésto*/
     color: #666;
     padding: 2px;
 }
@@ -93,7 +125,7 @@ div.burger-menu i{
 
 div.last-visit,
 div.offers{
-    display: flex;
+    display: flex; /* Ver cómo funcionaba ésto */
     flex-wrap: wrap;
 }
 
@@ -146,7 +178,7 @@ main section article i,
 }
 
 main section article i{
-    display: block;
+    display: block; /* ver qué era esto*/
     font-size: 16px;
     padding: 5px;
     width: 30px;
@@ -166,7 +198,8 @@ main section h3{
 main section div.products article i{
     transition: transform 1s;
 }
-
+/* debe ser alguna animación
+Ver qué era i */
 main section div.products article:hover i{
     transform: rotate(-90deg);
 }
@@ -180,11 +213,12 @@ article div.main-article{
     position: relative;
     padding: 15px;
 }
+/* Creo que es la sombra al posicionar el mouse sobre el elemento*/
 main section article:hover{
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 main section article:hover .description{
-    display: block;
+    display: block; /* ver las opciones de display*/
 }
 
 .login input[type='submit']:hover,
