--- a/views/home.html
+++ b/views/home.html
@@ -125,7 +125,48 @@
             </section>
         </main>
         <footer>
-            
+            <div id="pie">
+                <section>
+                    <article>
+                        <div>
+                        <h4>Mercadoliebre</h4>
+                        <p>Todos tus productos en un solo lugar</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                        <h4>Navegación</h4>
+                        <ul>
+                            <li>Ofertas</li>
+                            <li>Tiendas Oficiales</li>
+                            <li>Vender</li>
+                            <li>Ayuda</li>
+                            <li>Crea tu Cuenta</li>
+                            <li>Ingressa</li>
+                            <li>Mis compras</li>
+                        </ul>
+                       </div>
+                    </article>
+                    <article>
+                        <div>
+                        <h4>Medios de Pago</h4>
+                            <img class="tarjetas"   src="/images/creditcards/visa.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/mastercard.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/amex.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/naranja.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/mercadopago.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/pagofacil.png" alt="">                       
+                        </div>
+                    </article>
+                    <article>
+                        <h4>Contacto</h4>
+                    543834682598
+                    543834784654
+                    info@mercadoliebre.com.ar
+                    San Martín esquina Sarmiento, Catamarca
+                </article>
+                    </section>
+            </div>
         </footer>
         
     </body>
