Modifiqué rotación camioncito y agregué favicon a login y register

--- a/views/home.html
+++ b/views/home.html
@@ -156,7 +156,12 @@
                             <img class="tarjetas" src="/images/creditcards/amex.png" alt="">
                             <img class="tarjetas" src="/images/creditcards/naranja.png" alt="">
                             <img class="tarjetas" src="/images/creditcards/mercadopago.png" alt="">
-                            <img class="tarjetas" src="/images/creditcards/pagofacil.png" alt="">                       
+                            <img class="tarjetas" src="/images/creditcards/pagofacil.png" alt=""> 
+                        <h4>Métodos de Envío</h4>                      
+                        <img class="tarjetas" src="/images/envios/andreani.png" alt="">
+                        <img class="tarjetas" src="/images/envios/correo_argentino.png" alt="">
+                        <img class="tarjetas" src="/images/envios/branch@2x.png" alt="">
+                        <img class="tarjetas" src="/images/envios/table@2x.png" alt="">
                         </div>
                     </article>
                     <article>
