--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@ body{
 
 #pie {
     width: 100%;
-    height: 180px;
+    height: 250px;
     background-color: #EAC926;
 
 
@@ -26,7 +26,7 @@ body{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: flex-start;
 }
 
@@ -39,6 +39,7 @@ body{
 
 #pie section article h4{
     margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 h3{
@@ -201,7 +202,8 @@ main section div.products article i{
 /* debe ser alguna animación
 Ver qué era i */
 main section div.products article:hover i{
-    transform: rotate(-90deg);
+    transform: rotate(-360deg);
+    color: red;
 }
 
 article div.main-article{
