--- a/views/login.html
+++ b/views/login.html
@@ -39,14 +39,62 @@
             </div>
         </header>
         <main class="login">
+            <div class="caja-login">
             <form action="/" method="POST">
                 <input type="text" name="user" placeholder="Nombre de usuario">
                 <input type="password" name="pass" placeholder="Elegí tu contraseña">
                 <input type="submit" value="Enviar">
             </form>
+        </div>
         </main>
         <footer>
-
+            <div id="pie">
+                <section>
+                    <article>
+                        <div>
+                        <h4>Mercadoliebre</h4>
+                        <p>Todos tus productos en un solo lugar</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                        <h4>Navegación</h4>
+                        <ul>
+                            <li>Ofertas</li>
+                            <li>Tiendas Oficiales</li>
+                            <li>Vender</li>
+                            <li>Ayuda</li>
+                            <li>Crea tu Cuenta</li>
+                            <li>Ingresa</li>
+                            <li>Mis compras</li>
+                        </ul>
+                       </div>
+                    </article>
+                    <article>
+                        <div>
+                        <h4>Medios de Pago</h4>
+                            <img class="tarjetas"   src="/images/creditcards/visa.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/mastercard.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/amex.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/naranja.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/mercadopago.png" alt="">
+                            <img class="tarjetas" src="/images/creditcards/pagofacil.png" alt=""> 
+                        <h4>Métodos de Envío</h4>                      
+                        <img class="tarjetas" src="/images/envios/andreani.png" alt="">
+                        <img class="tarjetas" src="/images/envios/correo_argentino.png" alt="">
+                        <img class="tarjetas" src="/images/envios/branch@2x.png" alt="">
+                        <img class="tarjetas" src="/images/envios/table@2x.png" alt="">
+                        </div>
+                    </article>
+                    <article>
+                        <h4>Contacto</h4>
+                    543834682598
+                    543834784654
+                    info@mercadoliebre.com.ar
+                    San Martín esquina Sarmiento, Catamarca
+                </article>
+                    </section>
+            </div>
         </footer>
     </body>
 </html>
