--- a/views/home.html
+++ b/views/home.html
@@ -143,7 +143,7 @@
                             <li>Vender</li>
                             <li>Ayuda</li>
                             <li>Crea tu Cuenta</li>
-                            <li>Ingressa</li>
+                            <li>Ingresa</li>
                             <li>Mis compras</li>
                         </ul>
                        </div>
