Cambios en encabezado

--- a/views/home.html
+++ b/views/home.html
@@ -10,18 +10,19 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <header>
-            <div class="top-header">
+        <header class="main-header">
+            <div class="main-header-top-bar">
                 <div class="logo"> 
                     <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
                 </div>
                 <div class="form" action="#" method="GET">
                     <div class="input">Buscar productos, marcas y más</div>
-                    <div class="submit"><i class="fa fa-search"></i></div>
+                    <div class="logo"><i class="fa fa-search"></i></div>
                 </div>
-                <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+                <div class="copy-header"><p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p></div>
+                
             </div>
-            <nav>
+            <nav class="main-header-bottom-bar">
                 <ul>
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
@@ -138,13 +139,13 @@
                         <div>
                         <h4>Navegación</h4>
                         <ul>
-                            <li>Ofertas</li>
-                            <li>Tiendas Oficiales</li>
-                            <li>Vender</li>
-                            <li>Ayuda</li>
-                            <li>Crea tu Cuenta</li>
-                            <li>Ingresa</li>
-                            <li>Mis compras</li>
+                            <a href="#"><li>Ofertas</li></a>
+                            <a href="#"> <li>Tiendas Oficiales</li></a>
+                            <a href="#"><li>Vender</li></a>
+                            <a href="#"><li>Ayuda</li></a>
+                            <a href="#"><li>Crea tu Cuenta</li></a>
+                            <a href="#"> <li>Ingresa</li></a>
+                            <a href="#"><li>Mis compras</li></a>
                         </ul>
                        </div>
                     </article>
@@ -171,9 +172,8 @@
                     info@mercadoliebre.com.ar
                     San Martín esquina Sarmiento, Catamarca
                 </article>
-                    </section>
+                </section>
             </div>
-        </footer>
-        
+        </footer>        
     </body>
 </html>
