--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,19 @@
     box-sizing: border-box; /*Ver qué hacía ésto*/
 }
 
+.main-header-bottom-bar li:hover {
+    background-color: salmon;
+}
+
+a:link, a:visited, a:active {
+    text-decoration:none;
+    color: #000;
+}
+#pie a:hover{
+    text-decoration: underline;
+    color: salmon;
+}
+
 .caja-registro{
     background-color: rgb(184, 176, 176);
     border: #464242 dotted 2px;
@@ -34,10 +47,8 @@ body{
 
 #pie {
     width: 100%;
-    height: 250px;
+    height: 100%;
     background-color: #EAC926;
-
-
 }
 
 .tarjetas {
@@ -56,8 +67,12 @@ body{
 #pie section article {
     color: #464242;
     width: 200px;
-    height: 150px;
-    margin-top:30px;
+    height: 210px;
+    margin-top:10px;
+}
+
+#pie li {
+    list-style : none;
 }
 
 #pie section article h4{
@@ -72,7 +87,7 @@ h3{
 p{
     font-size: 12px;
 }
-
+/*y el de abajo?*/
 div.top-header{
     display: flex;
     flex-wrap: wrap;
@@ -202,7 +217,7 @@ main section article i,
 }
 
 main section article i{
-    display: block; /* ver qué era esto*/
+    display: block; /* para que muestre */
     font-size: 16px;
     padding: 5px;
     width: 30px;
@@ -222,8 +237,7 @@ main section h3{
 main section div.products article i{
     transition: transform 1s;
 }
-/* debe ser alguna animación
-Ver qué era i */
+/* i es una imagen */
 main section div.products article:hover i{
     transform: rotate(-360deg);
     color: red;
@@ -243,7 +257,7 @@ main section article:hover{
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 main section article:hover .description{
-    display: block; /* ver las opciones de display*/
+    display: block; /* mostraría la descripción, pero no la tengo oculta */
 }
 
 .login input[type='submit']:hover,
@@ -252,6 +266,13 @@ main section article:hover .description{
 }
 
 @media (min-width: 361px){
+
+    .main-header-top-bar{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
     main section div.products{
         display: flex;
         flex-direction: row;
@@ -271,6 +292,51 @@ main section article:hover .description{
 }
 
 @media (min-width: 769px){
+
+    .main-header { 
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-header-top-bar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .main-header-bottom-bar {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .logo {
+        max-width: 350px;
+    }
+
+    .copy-header{
+        max-width: 350px;
+        text-align: right;
+    }
+
+    .burger-menu{
+        display: none;
+    }
+
+    .main-header-bottom-bar ul{
+        display: flex;
+        flex-direction: row;
+        
+    }
+    
+    .main-header-bottom-bar li{
+        margin: 0 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 5px;
+        border: 15px;
+    }
+
     main section div.products article{
         width: 22%;
     }
